# ntp_client

./: CMakeLists.txt  README.md  ntp_client
src/: NtpClient.cpp  NtpClient.hpp  NtpMessageStruct.hpp  main.cpp
